# spherical_joint_plugin

./: CMakeLists.txt  README.md  package.xml
launch/: spawn_robot.launch
src/: spherical_joint_plugin.cc  spherical_joint_plugin.hh
urdf/: floating_rbs.urdf.xacro  spherical_pendulum.urdf.xacro
