<?xml version="1.0"?>
<package format="2">
  <name>spherical_joint_plugin</name>
  <version>0.0.0</version>
  <description>The spherical_joint_plugin package</description>

  <maintainer email="prasanth.kotaru@gmail.com">kotaru</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>eigen</depend>
  <depend>gazebo</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
